--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,8 +28,15 @@ linters:
     - paralleltest
     - forbidigo
     - exhaustivestruct
-    - interfacer
+    - interfacer # deprecated
     - forcetypeassert
+    - scopelint # deprecated
+    - ifshort # too many false positives
+    - golint # deprecated
+    - varnamelen
+    - tagliatelle
+    - errname
+    - ireturn
 
 issues:
   exclude-use-default: false
